--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,14 @@
 <footer>
-	<div class="content-padding">
 
+	<div class="content-padding">
 		<div class="footer-content">
+		
 			<p>Copyright &copy; Oscar Hedblad</p>
 
 			<div class="social-media-icons">
 				<a href="https://github.com/hedbladucf"><i class="fa fa-empire"></i></a>
-				<a href="https://www.linkedin.com/in/oscar-hedblad-26840a82?trk=hp-identity-name"><i class="fa fa-rebel"></i></a>
+				<a href="https://www.linkedin.com/in/oscar-hedblad-26840a82?trk=hp-identity-name">
+				<i class="fa fa-rebel"></i></a>
 			</div>
 
 		</div>
